--- a/Footer/Footer/styles.css
+++ b/Footer/Footer/styles.css
@@ -1,52 +1,49 @@
-a {
-    color: white;
-}
-
-/* General styles for the footer */
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
-
 /* Styles for the content within the footer */
 .footer-content {
-    display: flex;
-    flex-direction: column; /* Stack items in a column for mobile */
-    align-items: center; /* Center items horizontally */
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
 }
 
 .contact-info {
-    text-align: center; /* Center align contact info */
+  text-align: left; 
+
+}
+.contact-info p {
+  margin-top: 15px;
+  margin-bottom: 15 px; 
 }
 
 .footer-links {
-    margin-top: 10px; /* Space between contact info and links */
+  margin-top: 10px; 
 }
 
 .footer-links a {
-    display: block; /* Stack links vertically */
-    color: #fff;
-    padding: 10px;
-    text-decoration: none;
+  display: block; 
+  color: #fff;
+  padding: 10px;
+  text-decoration: none;  
 }
 
+.footer-links a:hover {
+  color: red;
+  text-decoration: underline;
+}
 .footer-image {
-    text-align: center; /* Center align the image */
-    margin-top: 10px; /* Space between links and image */
+  text-align: center; 
+  margin-top: 10px; 
 }
 
 .footer-image img {
-    width: 7rem; /* Responsive image */
-    height: auto;
+  width: 7rem; 
+  height: auto;
 }
 
 @media screen and (min-width: 786px) {
-    /* Styles for the content within the footer */
+   
     .footer-content {
         display: flex;
         justify-content: space-between;
-        flex-direction: row; /* Stack items in a row for desktop */
+        flex-direction: row; 
     }
 }
