--- a/kontakt/style.css
+++ b/kontakt/style.css
@@ -12,8 +12,8 @@
       background-color: #272727;
   }
   
-  /* ---KONTAKT START---*/
-  
+/* ---KONTAKT START---*/
+
   /*wrap*/
   .ko-form-wrapper {
     display: flex;
@@ -65,18 +65,31 @@
     color: red;
   }
   
-  .ko-form-group input,
+  .ko-form-group input{
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 10px; /* Just an example padding, adjust as needed */
+    height: 2.5rem; /* Just an example height, adjust as needed */
+  }
   .ko-form-group textarea {
     width: 100%;
     box-sizing: border-box;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    padding: 10px; /* Just an example padding, adjust as needed */
+    height: 6rem; /* Just an example height, adjust as needed */
   }
   
   .ko-form-group button {
-    width: 20%;
+    width: 15%;
     background-color: red;
+    padding-top: 10px;
+    padding-bottom: 10px;
     color: white;
+    font-size: 15px;
+    border: 0;
   }
   
   .ko-form-group label {
@@ -100,6 +113,7 @@
     font-size: 1.5rem;
     text-transform: capitalize;
   }
+
 
   /* Navbar */
   .navbar {
