--- a/ALT CSS/Style.css
+++ b/ALT CSS/Style.css
@@ -58,7 +58,9 @@
     }
   
   /* ---FAQ SLUT---*/
-  
+
+
+
   
   
   /* ---KONTAKT START---*/
@@ -144,6 +146,10 @@
       border-radius: 10px;
     }
     /* ---KONTAKT SLUT---*/
+
+
+
+
   
   /* ---YDELSER START---*/
   
@@ -188,6 +194,10 @@
    
   
   /* ---YDELSER SLUT---*/
+
+
+
+
   
   /* ---FOOTER START---*/
   
@@ -239,6 +249,11 @@
     height: auto;
   }
   /* ---FOOTER SLUT---*/
+
+
+
+
+
         
   /* ---CASES START---*/
   .page-title {
@@ -292,6 +307,8 @@
   }
   
   /* ---CASES SLUT---*/
+
+
   
   
   
@@ -379,6 +396,11 @@
   }
   
   /* ---NAVBAR SLUT---*/
+
+
+
+
+
   
   /* ---OM OS START---*/
   
@@ -448,6 +470,10 @@
   }
   
   /* ---OM OS SLUT---*/
+
+
+
+/* ---DIT EGTET KODE VICTOR--- */
   
   h1 {
     font-size: 45px;
