--- a/css/style.css
+++ b/css/style.css
@@ -784,6 +784,7 @@ color: #202020;
   color: white;
   text-transform: capitalize;
   font-size: 2rem;
+  margin-top: 2rem;
 }
 
 @media only screen and (min-width: 768px) {
